force-app/main/default/objects/Task_Genesys_Routing_Control__c/Task_Genesys_Routing_Control__c.object-meta.xml
<CustomObject>
    <description>This is for Task Genesys Routing Control. SDT-18329</description>
    <label>Task Genesys Routing Control</label>
    <nameField>
        <displayFormat>TGR-{0000}</displayFormat>
        <label>Task Genesys Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Genesys Routing Controls</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>