force-app/main/default/objects/Task_Genesys_Routing_Control__c/fields/Primary_Segment__c.field-meta.xml
<CustomField>
    <fullName>Primary_Segment__c</fullName>
    <description>Task Genesys Routing Controls</description>
    <label>Primary Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Commercial Property</fullName>
            </value>
            <value>
                <fullName>Construction and Demolition</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Malls</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Inside Sales Rep</fullName>
            </value>
            <value>
                <fullName>Do Not Use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>