force-app/main/default/objects/Task_Genesys_Routing_Control__c/fields/Service_Flag__c.field-meta.xml
<CustomField>
    <fullName>Service_Flag__c</fullName>
    <description>Task Genesys Routing Control</description>
    <label>Service Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CS</fullName>
                <default>true</default>
                <label>CS</label>
            </value>
            <value>
                <fullName>PS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>