force-app/main/default/objects/Task_Genesys_Routing_Control__c/fields/Stop_Routing__c.field-meta.xml
<CustomField>
    <fullName>Stop_Routing__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Task Genesys Routing Control</description>
    <label>Stop Routing</label>
    <type>Checkbox</type>
</CustomField>