force-app/main/default/objects/Task_Genesys_Routing_Control__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <description>Task Genesys Routing Control</description>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Obtain Vendor Update</fullName>
            </value>
            <value>
                <fullName>Confirm Service Completion</fullName>
                <isActive>false</isActive>
                <label>Confirm Service Completion</label>
            </value>
            <value>
                <fullName>Confirm Service Completion with Location</fullName>
                <isActive>false</isActive>
                <label>Confirm Service Completion with Location</label>
            </value>
            <value>
                <fullName>Obtain Schedule Confirmation</fullName>
                <isActive>false</isActive>
                <label>Obtain Schedule Confirmation</label>
            </value>
            <value>
                <fullName>Resolve Service Issue</fullName>
                <isActive>false</isActive>
                <label>Resolve Service Issue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>