force-app/main/default/objects/Task_Genesys_Routing_Control__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Task_Type__c</columns>
    <columns>Stop_Routing__c</columns>
    <columns>Primary_Segment__c</columns>
    <columns>Service_Flag__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>